New Blockchain web

--- a/blockchain.topmonks.com/src/html/shared/footer.html
+++ b/blockchain.topmonks.com/src/html/shared/footer.html
@@ -1,13 +1,56 @@
 <link rel="stylesheet" href="/stylesheets/footer.css">
 
 <footer id="social" class="social">
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="sro mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
-        <p>© 2018 TopMonks s.r.o.</p>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <ul><h3>What do we do?</h3>
+          <li><a href="https://www.topmonks.com/">Software development</a></li>
+          <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
+          <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
+          <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+        </ul>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <ul><h3>Looking for something?</h3>
+          <li><a class="active" href="/">Home</a></li>
+          <li><a href="https://www.topmonks.com/about-us/">About TopMonks</a></li>
+          <li><a href="https://www.topmonks.com/meet-us/">Meet Us</a></li>
+          <li><a href="https://blog.topmonks.com/">Blog</a></li>
+          <li><a href="https://www.topmonks.com/jobs/">Jobs</a></li>
+          <li><a href="https://www.topmonks.com/contact/">Contacts</a></li>
+        </ul>
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <h3>About us</h3>
+        <p>We are your software development partners, experienced with both startup and
+          corporate environment.</p>
+        <div itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"><span
+            itemprop="legalName">TopMonks s.r.o.</span>
+          <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
+            <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress"><span
+                itemprop="streetAddress">Struhařovská 2931/9</span><br><span itemprop="postalCode">141 00</span> <span
+                itemprop="addressLocality">Praha 4</span><br><span itemprop="addressCountry">Czech Republic</span>
+            </div>
+            <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
+              <meta itemprop="latitude" content="50.045386">
+              <meta itemprop="longitude" content="14.491246">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <hr>
+      </div>
+
+
+      <div
+        class="sro mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+        <p>© 2018 TopMonks s.r.o., DIČ: CZ24847437</p>
+      </div>
+
+      <div class="social mdc-layout-grid__cell">
         <div class="social-buttons">
           <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me"
              itemprop="sameAs" class="linkedin">
