Blockchain - Link to "Hire our dTeam"

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -231,7 +231,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a title="Hire our dTeam Button" class="btn" href="">Hire our dTeam today</a>
+            <a title="Hire our dTeam Button" class="btn" href="#contact">Hire our dTeam today</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -399,8 +399,6 @@
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
-
-
         </div>
       </div>
     </section>
