Blockchain Nav Bar links

--- a/blockchain.topmonks.com/src/html/shared/header.html
+++ b/blockchain.topmonks.com/src/html/shared/header.html
@@ -72,16 +72,16 @@
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li>
-              <a class="active" href="#services">Services</a>
+              <a class="active" href="/#services">Services</a>
             </li>
             <li>
-              <a class="active" href="#case-studies">Case studies</a>
+              <a class="active" href="/#case-studies">Case studies</a>
             </li>
             <li>
-              <a class="active" href="/blog">Publishing</a>
+              <a class="active" href="/blog/">Publishing</a>
             </li>
             <li>
-              <a class="active" href="#contact">Contact</a>
+              <a class="active" href="/#contact">Contact</a>
             </li>
           </ul>
         </nav>
