Blockchain - changes in text HP

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -124,7 +124,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>
-              Bring blockchain to your business with team of our experts
+              What can TopMonks Blockchain do for you?
             </h2>
           </div>
           <div class="skills_box mdc-layout-grid__cell">
@@ -231,7 +231,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a title="Hire our dTeam Button" class="btn" href="#contact">Hire our dTeam today</a>
+            <a title="Get in touch with us today Button" class="btn" href="#contact">Get in touch with us today</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -293,7 +293,7 @@
       <div class="mdc-layout-grid layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Sharing our knowledge<br> through media</h2>
+            <h2>Sharing our knowledge</h2>
           </div>
 
           <div class="blog__box mdc-layout-grid__cell">
@@ -406,7 +406,7 @@
       <div class="mdc-layout-grid layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>People that care<br> about your dApps?</h2>
+            <h2>Our team</h2>
           </div>
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
