--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -124,7 +124,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>
-              What can TopMonks Blockchain do for you?
+              What can TopMonks Blockchain<br> do for you?
             </h2>
           </div>
           <div class="skills_box mdc-layout-grid__cell">
