--- a/blockchain.topmonks.com/src/html/shared/footer.html
+++ b/blockchain.topmonks.com/src/html/shared/footer.html
@@ -4,7 +4,8 @@
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-        <ul><h3>What do we do?</h3>
+        <h3>What do we do?</h3>
+        <ul>
           <li><a href="https://www.topmonks.com/">Software development</a></li>
           <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
           <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
@@ -12,7 +13,8 @@
         </ul>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-        <ul><h3>Looking for something?</h3>
+        <h3>Looking for something?</h3>
+        <ul>
           <li><a class="active" href="/">Home</a></li>
           <li><a href="https://www.topmonks.com/about-us/">About TopMonks</a></li>
           <li><a href="https://www.topmonks.com/meet-us/">Meet Us</a></li>
