--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -231,7 +231,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a title="Get in touch with us today Button" class="btn" href="#contact">Get in touch with us today</a>
+            <a name="Contact Us Button" title="Get in touch with us today Button" class="btn" href="#contact">Get in touch with us today</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -319,7 +319,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih">Show
+                    <a name="Show Article Button" href="https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih">Show
                       article</a>
                   </div>
                 </div>
@@ -351,7 +351,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
+                    <a name="Show Article Button" href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
                       article</a>
                   </div>
                 </div>
@@ -383,7 +383,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
+                    <a name="Show Article Button" href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
                       article</a>
                   </div>
                 </div>
@@ -395,7 +395,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a title="Hire our dTeam Button" class="btn" href="/blog">Show more articles</a>
+            <a name="Show More Articles" title="Hire our dTeam Button" class="btn" href="/blog">Show more articles</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -469,7 +469,7 @@
             <h3>Josef Tětek</h3>
             <p>Crypto Analyst</p>
 
-            <a href="https://twitter.com/KryptoJoseph" title="Josef Tětek on LinkedIn">
+            <a href="https://twitter.com/KryptoJoseph" name="Twitter - Josef Tětek" title="Josef Tětek on Twitter">
               <svg width="35px" height="35px" viewBox="0 0 32 32" version="1.1"
                    xmlns="http://www.w3.org/2000/svg">
                 <title>Twitter Icon</title>
