Blockchain Web - mail added + stylizace stránky

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -80,7 +80,7 @@
               technologies.</p>
           </div>
           <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <div class="mdc-layout-grid__inner">
+            <div class="box--bgnd-circle mdc-layout-grid__inner">
               <div
                 class="box-values mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                 <svg width="32" height="45" viewBox="0 0 32 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -231,7 +231,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a name="Contact Us Button" title="Get in touch with us today Button" class="btn" href="#contact">Get in touch with us today</a>
+            <a name="Contact Us Button" title="Get in touch with us today Button" class="btn" href="mailto:blockchain&#64;topmonks.com">Get in touch with us today</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
