Blockchain web - Lea LinkedIn

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -415,7 +415,7 @@
                  alt="[photo] Lea Petrášová" width="92" height="92">
             <h3>Lea Petrášová</h3>
             <p>Blockchain & Crypto&nbsp;Projects</p>
-            <a href="https://res.cloudinary.com/topmonks/image/upload/v1574088176/avatar/lea-petrasova.jpg"
+            <a href="https://www.linkedin.com/in/leapetras/"
                name="LinkedIn - Lea Petrášová"
                title="Lea Petrášová on LinkedIn">
               <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
