Blockchain web - Article Link

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -298,9 +298,9 @@
 
           <div class="blog__box mdc-layout-grid__cell">
             <a name="Link to Article"
-               href="https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih"
+               href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/"
                class="mdc-layout-grid__cell--span-12">
-              <div class="mdc-layout-grid__inner">
+              <article class="mdc-layout-grid__inner">
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for an article"
@@ -319,11 +319,11 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a name="Show Article Button" href="https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih">Show
+                    <a name="Show Article Button" href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
                       article</a>
                   </div>
                 </div>
-              </div>
+              </article>
             </a>
           </div>
 
