--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -301,13 +301,12 @@
                href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/"
                class="mdc-layout-grid__cell--span-12">
               <article class="mdc-layout-grid__inner">
-
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for an article"
+                  <img width="100%" alt="Photo for the article"
                        src="https://res.cloudinary.com/topmonks/image/upload/v1574084565/blockchain.topmonks.com/article-img01.png">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <span class="published-date">NOVEMBER 15TH 2019</span>
+                  <span class="published-date">NOVEMBER 14TH 2019</span>
                   <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
