--- a/session-monk.topmonks.com/src/html/index.html
+++ b/session-monk.topmonks.com/src/html/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>TopMonks</h1>
-    <h2>Created with simple generator</h2>
+    <h1>Session Monk</h1>
+    <h2>Your session based application</h2>
   </div>
 </body>
 
