--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -238,28 +238,29 @@
         </div>
       </div>
     </section>
+    <a href="https://www.topmonks.com/case-studies/xixoio/">VIEW CASE STUDY</a>
     <section id="case-studies" class="our-work">
       <div class="mdc-layout-grid layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>It’s&nbsp;not what you say,<br>it’s&nbsp;what you do.</h2>
           </div>
-          <div class="shrink our-work_box box--fintech mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <a href="https://www.topmonks.com/case-studies/xixoio/" class="shrink our-work_box box--fintech mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Fintech platform<br> with multiple modules.</h3>
             <p>We found our cooperation with TopMonks partner very productive. Professional
               approach expressed in initiative, creativity, deep knowledge of subject field
               and strong compliance with time requirements allowed us to launch product on
               time and without complications.</p>
             <span class="representative">Nataliya Rozhok / Chief Information Officer</span>
-          </div>
-          <div class="shrink our-work_box box--crypto mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          </a>
+          <a href="https://www.topmonks.com/case-studies/profi-option/" class="shrink our-work_box box--crypto mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Crypto assets trading<br> platform based on binary options</h3>
             <p>Tomáš Paulus really knows what he's&nbsp;doing. Based on his research, he
               adapted the platform into a usable form with a professional design. We certainly
               recommend him further.</p>
             <span class="representative">Karel Dostál / Co-founder</span>
-          </div>
-          <div class="shrink our-work_box box--audit mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          </a>
+          <div class="our-work_box box--audit mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Exceptionally fast audit<br> of smart contracts architecture</h3>
             <p>Lumir has proven to be an incredibly valuable team player that matched very
               well with our senior product/dev team and proved exceptionally fast and
@@ -268,7 +269,7 @@
             <span class="representative">Patrik Tjokorda / Chief Executive Officer</span>
           </div>
 
-          <div class="shrink our-work_box box--incubator mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="our-work_box box--incubator mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Development support<br> for startup incubator</h3>
             <p>The awesome people at TopMonks were so helpful and generous with their time
               while our startup incubator was growing. We had needs for front-end, back-end,
@@ -277,7 +278,7 @@
             <span class="representative">Tom Counsell, Director at B Hub Prague, Startup Incubator</span>
           </div>
 
-          <div class="shrink our-work_box box--defi mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="our-work_box box--defi mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>DeFi Puzzle<br> Second layer DeFi solution</h3>
             <p>Leveraged trading reinvented.<br>
               Construct any custom financial product on top of Compound money market positions. Hold the products for
