--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -515,7 +515,7 @@
            itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
-            <img alt="[foto] Lea Petrášová" src="https://insight.topmonks.com/avatar/lea-petrasova"
+            <img alt="[foto] Lea Petrášová" src="https://res.cloudinary.com/topmonks/image/upload/v1574088319/avatar/lea-petrasova.jpg"
                  onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'" width="100" height="100"
                  style="margin: 0.5em auto">
           </div>
