Better app description

--- a/session-monk.topmonks.com/src/html/index.html
+++ b/session-monk.topmonks.com/src/html/index.html
@@ -13,6 +13,8 @@
   <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
     <h1>Session Monk</h1>
     <h2>Your session based application</h2>
+    <p>Use our generic fully skinnable app to rate and control various session based events. Be it a coffee tasting,
+    a game with your kids or an excercise in a gym, the ultimate application is up to you. </p>
   </div>
 </body>
 
