--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -58,6 +58,43 @@
     </div>
   </div>
 </section>
+<section class="promo">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="https://medium.com/@jakubbalada/black-friday-2019-s-hl%C3%ADda%C4%8Dem-shop%C5%AF-9a3ddd352a8c"
+           title="Přečtě si výsledky Analýzy Black Friday 2019">
+          <picture>
+            <source
+              media="screen and (max-width: 479px)"
+              srcset="
+              https://res.cloudinary.com/topmonks/image/upload/w_480,q_auto,dpr_1,f_auto/v1575298047/www.hlidacshopu.cz/banner-mobil.png 1x,
+              https://res.cloudinary.com/topmonks/image/upload/w_480,q_auto,dpr_1.5,f_auto/v1575298047/www.hlidacshopu.cz/banner-mobil.png 1.5x,
+              https://res.cloudinary.com/topmonks/image/upload/w_480,q_auto,dpr_2,f_auto/v1575298047/www.hlidacshopu.cz/banner-mobil.png 2x
+            ">
+            <source
+              media="screen and (min-width: 480px) and (max-width: 839px)"
+              srcset="
+              https://res.cloudinary.com/topmonks/image/upload/w_840,q_auto,dpr_1,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 1x,
+              https://res.cloudinary.com/topmonks/image/upload/w_840,q_auto,dpr_1.5,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 1.5x,
+              https://res.cloudinary.com/topmonks/image/upload/w_840,q_auto,dpr_2,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 2x
+            ">
+            <source
+              media="screen and (min-width: 840px)"
+              srcset="
+              https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_1,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 1x,
+              https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_1.5,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 1.5x,
+              https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_2,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png 2x,
+            ">
+            <img alt="Analýza Black Friday 2019"
+                 class="responsive"
+                 src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_auto,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png">
+          </picture>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="attendant">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
