--- a/session-monk.topmonks.com/src/html/index.html
+++ b/session-monk.topmonks.com/src/html/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="apple-itunes-app" content="app-id=1489139811">
 </head>
 
 <body>
