--- a/www.hlidacshopu.cz/src/html/app/index.html
+++ b/www.hlidacshopu.cz/src/html/app/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data"/>
   <meta
     name="viewport"
-    content="width=device-width,initial-scale=1,max-scale=1,viewport-fit=cover"
+    content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
   />
   <title>Hlídačshopů.cz</title>
   <link rel="manifest" href="/site.webmanifest">
