--- a/www.hlidacshopu.cz/src/html/app/index.html
+++ b/www.hlidacshopu.cz/src/html/app/index.html
@@ -6,12 +6,18 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data"/>
   <meta
     name="viewport"
-    content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
+    content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
   />
   <title>Hlídačshopů.cz</title>
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="application-name" content="Hlídač shopů">
+  <meta name="apple-mobile-web-app-title" content="Hlídač shopů">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <style>
     :root {
       --mdc-theme-primary: #fff;
