--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -14,6 +14,9 @@
 
 {% block styles %}
   <link rel="stylesheet" href="/assets/css/index.css">
+  <meta name="apple-mobile-web-app-title" content="Hlídač shopů">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 {% endblock %}
 
 {% block main %}
