HS - tabs - numbers

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -139,32 +139,39 @@
             <div class="tabs">
               <div class="tab">
                 <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
-                <label for="tab-1" class="tab-label">Po instalaci v&nbsp;detailu produktu vašeho e-shopu se pod cenou
-                  zobrazí&nbsp;graf</label>
+                <label for="tab-1" class="tab-label">
+                  <p class="tab--number">1.</p>
+                  <p class="tab--info">Po instalaci v&nbsp;detailu produktu vašeho e-shopu se pod cenou zobrazí&nbsp;graf</p>
+                </label>
                 <div class="tab-content">
                   <img alt="Step 1: Graf"
                        src="https://res.cloudinary.com/topmonks/image/upload/v1575461537/www.hlidacshopu.cz/window01.png"
-                       width="800px">
+                       width="640px">
                 </div>
               </div>
               <div class="tab">
                 <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
-                <label for="tab-2" class="tab-label">Srovnání původní přeškrtnuté ceny a aktuální
-                  prodejní&nbsp;ceny</label>
+                <label for="tab-2" class="tab-label">
+                  <p class="tab--number">2.</p>
+                  <p class="tab--info">Srovnání původní přeškrtnuté ceny a aktuální prodejní&nbsp;ceny</p>
+                </label>
                 <div class="tab-content">
                   <img alt="Step 2: Graf - Přeškrtnuté a aktuální ceny"
                        src="https://res.cloudinary.com/topmonks/image/upload/v1575461531/www.hlidacshopu.cz/window02.png"
-                       width="800px">
+                       width="640px">
                 </div>
               </div>
               <div class="tab">
                 <input type="radio" name="css-tabs" id="tab-3" class="tab-switch">
-                <label for="tab-3" class="tab-label">Po najetí na graf, můžete libovolně vidět v&nbsp;čase vývoj uváděné
-                  původní a prodejní&nbsp;ceny</label>
+                <label for="tab-3" class="tab-label">
+                  <p class="tab--number">3.</p>
+                  <p class="tab--info">Po najetí na graf, můžete libovolně vidět v&nbsp;čase vývoj uváděné
+                  původní a prodejní&nbsp;ceny</p>
+                </label>
                 <div class="tab-content">
                   <img alt="Step 3: Graf - Vývoj cen"
                        src="https://res.cloudinary.com/topmonks/image/upload/v1575461788/www.hlidacshopu.cz/window03.png"
-                       width="800px">
+                       width="640px">
                 </div>
               </div>
             </div>
