HS - PWA html + css

--- a/www.hlidacshopu.cz/src/html/app/index.html
+++ b/www.hlidacshopu.cz/src/html/app/index.html
@@ -126,10 +126,9 @@
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell">
       <form class="hs-form">
-        <p><label for="url-field">Zadejte adresu stránky s detailem produktu:</label></p>
         <div class="hs-textfield">
           <i class="hs-textfield__icon material-icons" tabindex="0" role="button">search</i>
-          <input type="url" name="url" id="url-field" required placeholder="https://www.&hellip;">
+          <input type="url" name="url" id="url-field" required placeholder="Vložte odkaz vybraného produktu ...">
         </div>
         <button type="submit">Ověřit vývoj ceny</button>
       </form>
