HS/app dark mode

--- a/www.hlidacshopu.cz/src/html/app/index.html
+++ b/www.hlidacshopu.cz/src/html/app/index.html
@@ -424,6 +424,11 @@
       }
     }
   });
+
+  if (window.matchMedia('(prefers-color-scheme)').media === 'not all') {
+    console.log('Browser doesn\'t support dark mode');
+  }
+
 </script>
 </body>
 </html>
