HS - md-tabs img

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -169,9 +169,7 @@
                   původní a prodejní&nbsp;ceny</p>
                 </label>
                 <div class="tab-content">
-                  <img alt="Step 3: Graf - Vývoj cen"
-                       src="https://res.cloudinary.com/topmonks/image/upload/v1575461788/www.hlidacshopu.cz/window03.png"
-                       width="800px">
+                  <img alt="Step 3: Graf - Vývoj cen" src="https://res.cloudinary.com/topmonks/image/upload/v1575461788/www.hlidacshopu.cz/window03.png" width="800px">
                 </div>
               </div>
             </div>
